[workspace]
members = [
    "bin/rpls",
    "crates/pulsechain/chainspec",
    "crates/pulsechain/hardforks",
    "crates/pulsechain/consensus",
    "crates/pulsechain/evm",
    "crates/pulsechain/node",
    "crates/pulsechain/rpc",
    "crates/pulsechain/tests",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
alloy-consensus = "1.0.38"
alloy-genesis = "1.0.38"
alloy-primitives = "1.3.1"
clap = "4.5.50"
dirs-next = "2.0.0"
eyre = "0.6.12"
hex = "0.4.3"
hex-literal = "1.0.0"
reth-cli = { git = "https://github.com/paradigmxyz/reth", rev = "ab2b11f40eed3623219c49022061a11a0b5e2c0c" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", rev = "ab2b11f40eed3623219c49022061a11a0b5e2c0c" }
reth-dns-discovery = { git = "https://github.com/paradigmxyz/reth", rev = "ab2b11f40eed3623219c49022061a11a0b5e2c0c" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "ab2b11f40eed3623219c49022061a11a0b5e2c0c", features = ["full", "cli"] }
reth-network = { git = "https://github.com/paradigmxyz/reth", rev = "ab2b11f40eed3623219c49022061a11a0b5e2c0c" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", rev = "ab2b11f40eed3623219c49022061a11a0b5e2c0c" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", rev = "ab2b11f40eed3623219c49022061a11a0b5e2c0c" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", rev = "ab2b11f40eed3623219c49022061a11a0b5e2c0c" }
reth-rpc-server-types = { git = "https://github.com/paradigmxyz/reth", rev = "ab2b11f40eed3623219c49022061a11a0b5e2c0c" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", rev = "ab2b11f40eed3623219c49022061a11a0b5e2c0c" }
sha2 = "0.10.9"
thiserror = "2.0.17"
tracing = "0.1.41"

pulsechain-chainspec = { path = "crates/pulsechain/chainspec" }
pulsechain-consensus = { path = "crates/pulsechain/consensus" }
pulsechain-evm = { path = "crates/pulsechain/evm" }
pulsechain-hardforks = { path = "crates/pulsechain/hardforks" }
pulsechain-node = { path = "crates/pulsechain/node" }
pulsechain-rpc = { path = "crates/pulsechain/rpc" }
