[package]
name = "pulsechain-chainspec"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
alloy-primitives.workspace = true
clap.workspace = true
eyre.workspace = true
pulsechain-hardforks.workspace = true
reth-dns-discovery.workspace = true
reth-cli.workspace = true
reth-ethereum.workspace = true
reth-network.workspace = true
reth-network-peers.workspace = true
reth-node-api.workspace = true
reth-node-builder.workspace = true
reth-rpc-server-types.workspace = true
reth-transaction-pool.workspace = true
tracing.workspace = true
